# SchoolTimetable

./: CMakeLists.txt  SchoolClass.cpp  SchoolClass.h  SchoolDay.h  SchoolTimetable.cpp  SchoolTimetable.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
